--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
               <h4 class="text-white" style="margin-bottom: 0">
                 Get your free quote from local installers in 3 min
               </h4>
-              <div class="d-grid gap-3">
-                <div class="d-flex align-items-center">
+              <ul class="d-grid gap-3">
+                <li class="d-flex align-items-center">
                   <div>
                     <img
                       src="./assets/image/mdi_tick-circle-outline.png"
@@ -38,35 +38,35 @@
                     />
                   </div>
                   <p class="extand">Get a Free solar savings report</p>
-                </div>
-                <div class="d-flex align-items-center">
+                </li>
+                <li class="d-flex align-items-center">
                   <div>
                     <img
                       src="./assets/image/mdi_tick-circle-outline.png"
                       alt=""
                     />
                   </div>
-                  <p class="extand">Get a Free solar savings report</p>
-                </div>
-                <div class="d-flex align-items-center">
+                  <p class="extand">See your personalized costs & savings</p>
+                </li>
+                <li class="d-flex align-items-center">
                   <div>
                     <img
                       src="./assets/image/mdi_tick-circle-outline.png"
                       alt=""
                     />
                   </div>
-                  <p class="extand">Get a Free solar savings report</p>
-                </div>
-                <div class="d-flex align-items-center">
+                  <p class="extand">Check out incentives in your state</p>
+                </li>
+                <li class="d-flex align-items-center">
                   <div>
                     <img
                       src="./assets/image/mdi_tick-circle-outline.png"
                       alt=""
                     />
                   </div>
-                  <p class="extand">Get a Free solar savings report</p>
-                </div>
-              </div>
+                  <p class="extand">Compare prices from local installers</p>
+                </li>
+              </ul>
             </div>
             <div class="text-center box-button">
               <button class="btn-1 text-white">Get your Free Quote Now</button>
@@ -258,26 +258,26 @@
             
             <div>
               <h1 class="title">Find the Best Solar Deal, Hassle-Free</h1>
-              <div style="padding-right: 80px;" class="d-grid gap2 pt24">
-                <div class="d-flex gap0">
+              <ul style="padding-right: 80px;" class="d-grid gap2 pt24">
+                <li class="d-flex gap0">
                   <div>
                     <img src="./assets/image/thunder.svg" alt="">
                   </div>
                   <p>Shopping around for solar can be overwhelming, so we’ve done the hard work for you.  </p>
-                </div>
-                <div class="d-flex gap0">
+                </li>
+                <li class="d-flex gap0">
                   <div>
                     <img src="./assets/image/thunder.svg" alt="">
                   </div>
                   <p>With Easy Solar Quotes, we’ve pre-screened top companies and filtered out the rest using real customer feedback.  </p>
-                </div>
-                <div class="d-flex gap0">
+                </li>
+                <li class="d-flex gap0">
                   <div>
                     <img src="./assets/image/thunder.svg" alt="">
                   </div>
                   <p>You get reliable quotes without the guesswork. Ready to see your options?</p>
-                </div>
-              </div>
+                </li>
+              </ul>
               <button class="mt32 p18 ">Get your Free Quote Today</button>
             </div>
             <div style="padding-right:30px">
@@ -316,6 +316,65 @@
             </div>
             <div>
               <img src="./assets/image/ooui_next-ltr.svg" class="p10" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bg-black">
+        <div class="container container5">
+          <h1 class="text-white pb64">FAQs</h1>
+          <div class="row gap5">
+            <div class="col">
+              <div class="d-flex pt24 pb24 align-items-center line_fo">
+                <div class="incon-item">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+                    <path d="M4.9 0.699951L3.92 1.74995L9.1 6.99995L3.92 12.25L4.9 13.3L11.2 6.99995L4.9 0.699951Z" fill="#1F2647"/>
+                  </svg>
+                </div>
+                <a href="#">How Long Do Solar Panels Typically Last?</a>
+              </div>
+              <div class="d-flex pt24 pb24 align-items-center line_fo">
+                <div class="incon-item">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+                    <path d="M4.9 0.699951L3.92 1.74995L9.1 6.99995L3.92 12.25L4.9 13.3L11.2 6.99995L4.9 0.699951Z" fill="#1F2647"/>
+                  </svg>
+                </div>
+                <a href="#">Are There Incentives for Going Solar in My State?</a>
+              </div>
+              <div class="d-flex pt24 pb24 align-items-center line_fo">
+                <div class="incon-item">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+                    <path d="M4.9 0.699951L3.92 1.74995L9.1 6.99995L3.92 12.25L4.9 13.3L11.2 6.99995L4.9 0.699951Z" fill="#1F2647"/>
+                  </svg>
+                </div>
+                <a href="#">Will my solar panels still produce electricity during cloudy days or at night?</a>
+              </div>
+            </div>
+            <div class="col">
+              <div class="d-flex pt24 pb24 align-items-center line_fo">
+                <div class="incon-item">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+                    <path d="M4.9 0.699951L3.92 1.74995L9.1 6.99995L3.92 12.25L4.9 13.3L11.2 6.99995L4.9 0.699951Z" fill="#1F2647"/>
+                  </svg>
+                </div>
+                <a href="#">How much can I save on my energy bills with solar panels?</a>
+              </div>
+              <div class="d-flex pt24 pb24 align-items-center line_fo">
+                <div class="incon-item">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+                    <path d="M4.9 0.699951L3.92 1.74995L9.1 6.99995L3.92 12.25L4.9 13.3L11.2 6.99995L4.9 0.699951Z" fill="#1F2647"/>
+                  </svg>
+                </div>
+                <a href="#">What maintenance do solar panels require?</a>
+              </div>
+              <div class="d-flex pt24 pb24 align-items-center line_fo">
+                <div class="incon-item">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+                    <path d="M4.9 0.699951L3.92 1.74995L9.1 6.99995L3.92 12.25L4.9 13.3L11.2 6.99995L4.9 0.699951Z" fill="#1F2647"/>
+                  </svg>
+                </div>
+                <a href="#">Can I install solar panels on any type of roof?</a>
+              </div>
             </div>
           </div>
         </div>
